--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -14,5 +15,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    
+    <!-- <script>
+        feather.replace()
+    </script> -->
   </body>
 </html>
