--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>META-fav.png">
+    <link rel="icon" href="<%= BASE_URL %>Meta-logo.png">
     <meta property="description" content="META戶外露營專賣品牌，主打各式風格露營選品，露營也能很時尚美學" />
     <meta name="keywords" content="META露營專賣，Glamorous優雅奢華，Camping露營，野奢露營，Glamping，露營用具，露營品牌，特色選品，忙碌放鬆，線上購物，露營野趣，品味生活，風格時尚，走進大自然，野外露宿，創意生活風格，露營設計品牌"/>
     <meta property="og:image" content="Meta-logo.png"/>
